# TobaccoAnalysis

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  PROJECT_BLUEPRINT.md  README.md  tobacco.qrc
src/: CMakeLists.txt  README.md  app_icon.rc  check_duplicate_samples.sql  main.cpp
src/config/: config.json  sql_config.json
src/config/database/: db_config.json  init_database.sql
src/core/: ConfigManager.cpp  ConfigManager.h  CurveMathUtils.cpp  CurveMathUtils.h  WindowManager.cpp  WindowManager.h  common.cpp  common.h
src/core/entities/: ChromatographyData.cpp  ChromatographyData.h  Curve.cpp  Curve.h  DictionaryOption.cpp  ProcessTgBigData.cpp  ProcessTgBigData.h  SingleTobaccoSample.h  SingleTobaccoSampleData.cpp  SingleTobaccoSampleData.h  TgBigData.cpp  TgBigData.h  TgSmallData.cpp  TgSmallData.h
src/core/models/: ChromatographyDataTableModel.h  DifferenceResultModel.cpp  DifferenceResultModel.h  SingleTobaccoSampleTableModel.h  TgBigDataTableModel.h
src/core/singletons/: SampleSelectionManager.cpp  SampleSelectionManager.h  StringManager.cpp  StringManager.h
src/core/sql/: SqlConfigLoader.cpp  SqlConfigValidator.h
src/data_access/: ChromatographyDataDAO.cpp  ChromatographyDataDAO.h  DatabaseConnector.cpp  DatabaseConnector.h  DictionaryOptionDAO.h  NavigatorDAO.cpp  NavigatorDAO.h  ProcessTgBigDataDAO.cpp  SampleDAO.cpp  SampleDAO.h  SingleTobaccoSampleDAO.cpp  TgBigDataDAO.cpp  TgBigDataDAO.h  TgSmallDataDAO.cpp  TgSmallRawDataDAO.cpp
src/gui/: IInteractiveView.h  MyWidget.cpp  MyWidget.h  mainwindow.cpp  mainwindow.h
src/gui/charts/: LineChartView.cpp
src/gui/dialogs/: AlgorithmSetting.h  ChromatographDataProcessDialog.cpp  ChromatographDataProcessDialog.h  ChromatographParameterSettingsDialog.cpp  ChromatographParameterSettingsDialog.h  ChromatographParameterSettingsDialog.ui  CsvPreviewDialog.cpp  CsvPreviewDialog.h  DictionaryListDialog.cpp  DifferenceTableDialog.cpp  ExcelPreviewDialog.cpp  ExcelPreviewDialog.h  ImportAttributesDialog.cpp  ImportAttributesDialog.h  ModelListDialog.h  NavigatorAttributeFilterDialog.cpp  NavigatorAttributeFilterDialog.h  ProcessTgBigDataProcessDialog.cpp  ProcessTgBigDataProcessDialog.h  ProcessTgBigParameterSettingsDialog.cpp  SampleAttributeDialog.cpp  SampleAttributeDialog.h  SampleListDialog.cpp  SamplePropertiesDialog.cpp  SamplePropertiesDialog.h  SensorDataImportConfigDialog.cpp  SingleMaterialEditDialog.cpp  SingleMaterialEditDialog.h  TgBigDataProcessDialog.cpp  TgBigDataProcessDialog.h  TgBigParameterSettingsDialog.cpp  TgBigParameterSettingsDialog.h  TgBigParameterSettingsDialog.ui  TgSmallDataProcessDialog.cpp  TgSmallDataProcessDialog.h  TgSmallParameterSettingsDialog.cpp  TgSmallParameterSettingsDialog.h  TgSmallRawDataProcessDialog.cpp  TgSmallRawDataProcessDialog.h  TwoCurvePickDialog.cpp  (+7 more)
src/gui/views/: ChartView.cpp  ChartView.h  DataNavigator.cpp  DataNavigator.h  SampleViewWindow.cpp  SampleViewWindow.h  SingleMaterialDataWidget.cpp  SingleMaterialDataWidget.h  singlematerialdatawidget.ui
src/gui/views/workbenches/: ChromatographDifferenceWorkbench.cpp  ChromatographDifferenceWorkbench.h  ProcessTgBigDifferenceWorkbench.cpp  ProcessTgBigDifferenceWorkbench.h  TgBigDifferenceWorkbench.cpp  TgSmallDifferenceWorkbench.cpp  TgSmallDifferenceWorkbench.h
src/resources/: resources.qrc
src/services/: DataProcessingService.cpp  DataProcessingService.h  ProcessTgBigDataMethods.cpp  SingleTobaccoSampleService.cpp  SingleTobaccoSampleService.h
src/services/algorithm/: COWAlignment.cpp  COWAlignment.h  ChromatogramCalibTables.cpp  ChromatogramCalibTables.h  ChromatogramDifferenceMetrics.cpp  ChromatogramDifferenceMetrics.h  ChromatogramSegmentFinetune.cpp  ChromatogramSegmentFinetune.h  Clipping.cpp  Euclidean.cpp  FindPeaks.h  IAlgorithmService.h  Loess.cpp  Loess.h  MockAlgorithmService.h  Nrmse.cpp  Nrmse.h  PeakSegCOWAlignment.cpp  PeakSegCOWAlignment.h  Pearson.cpp  Pearson.h  PlainRmse.cpp  PlainRmse.h  SavitzkyGolay.cpp  SavitzkyGolay.h  baselinecorrector.cpp
src/services/algorithm/processing/: IProcessingStep.h
src/services/analysis/: ParallelSampleAnalysisService.h  SampleComparisonService.cpp  SampleComparisonService.h
src/services/data_import/: ChromatographDataImportWorker.cpp  ChromatographDataImportWorker.h  ImportSampleNaming.h  ProcessTgBigDataImportWorker.cpp  ProcessTgBigDataImportWorker.h  TgBigDataImportWorker.cpp  TgBigDataImportWorker.h  TgSmallDataImportWorker.cpp  TgSmallDataImportWorker.h  TgSmallRawDataImportWorker.cpp  TgSmallRawDataImportWorker.h
src/sql/: create_tables.sql  init_data.sql
src/src/: main.cpp
src/src/core/: AppInitializer.cpp  AppInitializer.h  DatabaseInitializer.h  Folder.cpp  Folder.h  SciDAVisObject.h  common.cpp  common.h
src/src/core/entities/: ChromatographyData.cpp  ChromatographyData.h  DictionaryOption.h  ProcessTgBigData.h
src/src/core/models/: ChromatographyDataTableModel.cpp  ProcessTgBigDataTableModel.cpp  ProcessTgBigDataTableModel.h  SampleDataModel.cpp  SampleDataModel.h  SingleTobaccoSampleTableModel.cpp  TgBigDataTableModel.cpp  TgSmallDataTableModel.cpp  TgSmallDataTableModel.h
src/src/data_access/: DictionaryOptionDAO.cpp  NavigatorDAO.cpp  NavigatorDAO.h  ProcessTgBigDataDAO.h  SampleDAO.cpp  SampleDAO.h  SingleTobaccoSampleDAO.h  TgBigDataDAO.cpp  TgSmallDataDAO.cpp  TgSmallDataDAO.h  TgSmallRawDataDAO.h  databasemanager.cpp  databasemanager.h
src/src/gui/: ceshi.ui  mainwindow.h
src/src/services/: DataProcessingService.cpp  DataProcessingService.h  DictionaryOptionService.cpp  DictionaryOptionService.h  ProcessTgBigDataMethods.cpp  SingleTobaccoSampleService.cpp
src/src/utils/: ColorUtils.cpp  ConfigLoader.cpp  InfoAutoClose.cpp  SqlLogger.h  StackTraceUtils.h  logger.cpp
src/utils/: ColorUtils.h  ConfigLoader.h  InfoAutoClose.h  SqlLogger.cpp  StackTraceUtils.cpp  logger.h
src/utils/file_handler/: AbstractFileParser.h  AbstractFileWriter.h  CsvParser.cpp  CsvWriter.h  ExcelParser.h  FileHandlerFactory.h  XlsxParser.h  XlsxWriter.cpp
tests/: CMakeLists.txt  chromatogram_matlab_parity_test.cpp
(+137 files in other folders)
